Arreglado problema de foreing key, añade puntajes nuevos en la base de datos, actualiza puntajes pero manda error

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
             <h1>Puntajes</h1>
             <ul>
                 {% for puntaje in puntajes %}
-                    <li>{{ puntaje.nombre_usuario }}: {{ puntaje.puntaje }}, {{ puntaje.fecha }}</li>
+                    <li>{{ puntaje.IDusuario }}: {{ puntaje.Puntaje }}, {{ puntaje.Fecha }}</li>
                 {% endfor %}
             </ul>
         {% else %}
